retruturação do html

--- a/index.html
+++ b/index.html
@@ -7,90 +7,104 @@
     <title>Netflix Brasil - assistir a séries online, assistir a filmes online</title>
     <meta content="filme, séries, assistir online, assistir TV, TV online, ver filmes, streaming, filmes sem download, temporada completa série" name="keywords"/>
 
-    <link rel="stylesheet" href="/CSS/estilo.css">
+    <link rel="stylesheet" href="CSS/estilo.css">
 
 </head>
 <body>
-    <main class="hero-principal">
-        <div class="hero-content">
-            <div class="layout-netflix">  
-                <header class="logonetflix">
-                    <div class="logonetflix-header">
-                        <span class="logonetflix-nflogo nfLogo">
-                            <svg viewBox="0 0 111 30" class="svg-icon svg-icon-netflix-logo" focusable="false">
-                                <g id="netflix-logo">
-                                    <path d="M105.06233,14.2806261 L110.999156,30 C109.249227,29.7497422 107.500234,29.4366857 105.718437,29.1554972 L102.374168,20.4686475 L98.9371075,28.4375293 C97.2499766,28.1563408 95.5928391,28.061674 93.9057081,27.8432843 L99.9372012,14.0931671 L94.4680851,-5.68434189e-14 L99.5313525,-5.68434189e-14 L102.593495,7.87421502 L105.874965,-5.68434189e-14 L110.999156,-5.68434189e-14 L105.06233,14.2806261 Z M90.4686475,-5.68434189e-14 L85.8749649,-5.68434189e-14 L85.8749649,27.2499766 C87.3746368,27.3437061 88.9371075,27.4055675 90.4686475,27.5930265 L90.4686475,-5.68434189e-14 Z M81.9055207,26.93692 C77.7186241,26.6557316 73.5307901,26.4064111 69.250164,26.3117443 L69.250164,-5.68434189e-14 L73.9366389,-5.68434189e-14 L73.9366389,21.8745899 C76.6248008,21.9373887 79.3120255,22.1557784 81.9055207,22.2804387 L81.9055207,26.93692 Z M64.2496954,10.6561065 L64.2496954,15.3435186 L57.8442216,15.3435186 L57.8442216,25.9996251 L53.2186709,25.9996251 L53.2186709,-5.68434189e-14 L66.3436123,-5.68434189e-14 L66.3436123,4.68741213 L57.8442216,4.68741213 L57.8442216,10.6561065 L64.2496954,10.6561065 Z M45.3435186,4.68741213 L45.3435186,26.2498828 C43.7810479,26.2498828 42.1876465,26.2498828 40.6561065,26.3117443 L40.6561065,4.68741213 L35.8121661,4.68741213 L35.8121661,-5.68434189e-14 L50.2183897,-5.68434189e-14 L50.2183897,4.68741213 L45.3435186,4.68741213 Z M30.749836,15.5928391 C28.687787,15.5928391 26.2498828,15.5928391 24.4999531,15.6875059 L24.4999531,22.6562939 C27.2499766,22.4678976 30,22.2495079 32.7809542,22.1557784 L32.7809542,26.6557316 L19.812541,27.6876933 L19.812541,-5.68434189e-14 L32.7809542,-5.68434189e-14 L32.7809542,4.68741213 L24.4999531,4.68741213 L24.4999531,10.9991564 C26.3126816,10.9991564 29.0936358,10.9054269 30.749836,10.9054269 L30.749836,15.5928391 Z M4.78114163,12.9684132 L4.78114163,29.3429562 C3.09401069,29.5313525 1.59340144,29.7497422 0,30 L0,-5.68434189e-14 L4.4690224,-5.68434189e-14 L10.562377,17.0315868 L10.562377,-5.68434189e-14 L15.2497891,-5.68434189e-14 L15.2497891,28.061674 C13.5935889,28.3437998 11.906458,28.4375293 10.1246602,28.6868498 L4.78114163,12.9684132 Z" id="Fill-14"></path>
-                                </g>
-                            </svg>
-                        </span>
-                   <select class="idio"> 
-                        <div class="idioma">
-                            <option>Português</option>
-                            <option>English</option>   
-                        </div>
-                    </select>
-                    <a href="/login" class="authLinks redButton" data-uia="header-login-link">Entrar</a>
-                </header>
+  <div class="head">
+    <header class="header">
+        <div class="logonetflix-nflogo nfLogo">
+            <svg viewBox="0 0 111 30" class="svg-icon svg-icon-netflix-logo" focusable="false">
+                <g id="netflix-logo">
+                    <path d="M105.06233,14.2806261 L110.999156,30 C109.249227,29.7497422 107.500234,29.4366857 105.718437,29.1554972 L102.374168,20.4686475 L98.9371075,28.4375293 C97.2499766,28.1563408 95.5928391,28.061674 93.9057081,27.8432843 L99.9372012,14.0931671 L94.4680851,-5.68434189e-14 L99.5313525,-5.68434189e-14 L102.593495,7.87421502 L105.874965,-5.68434189e-14 L110.999156,-5.68434189e-14 L105.06233,14.2806261 Z M90.4686475,-5.68434189e-14 L85.8749649,-5.68434189e-14 L85.8749649,27.2499766 C87.3746368,27.3437061 88.9371075,27.4055675 90.4686475,27.5930265 L90.4686475,-5.68434189e-14 Z M81.9055207,26.93692 C77.7186241,26.6557316 73.5307901,26.4064111 69.250164,26.3117443 L69.250164,-5.68434189e-14 L73.9366389,-5.68434189e-14 L73.9366389,21.8745899 C76.6248008,21.9373887 79.3120255,22.1557784 81.9055207,22.2804387 L81.9055207,26.93692 Z M64.2496954,10.6561065 L64.2496954,15.3435186 L57.8442216,15.3435186 L57.8442216,25.9996251 L53.2186709,25.9996251 L53.2186709,-5.68434189e-14 L66.3436123,-5.68434189e-14 L66.3436123,4.68741213 L57.8442216,4.68741213 L57.8442216,10.6561065 L64.2496954,10.6561065 Z M45.3435186,4.68741213 L45.3435186,26.2498828 C43.7810479,26.2498828 42.1876465,26.2498828 40.6561065,26.3117443 L40.6561065,4.68741213 L35.8121661,4.68741213 L35.8121661,-5.68434189e-14 L50.2183897,-5.68434189e-14 L50.2183897,4.68741213 L45.3435186,4.68741213 Z M30.749836,15.5928391 C28.687787,15.5928391 26.2498828,15.5928391 24.4999531,15.6875059 L24.4999531,22.6562939 C27.2499766,22.4678976 30,22.2495079 32.7809542,22.1557784 L32.7809542,26.6557316 L19.812541,27.6876933 L19.812541,-5.68434189e-14 L32.7809542,-5.68434189e-14 L32.7809542,4.68741213 L24.4999531,4.68741213 L24.4999531,10.9991564 C26.3126816,10.9991564 29.0936358,10.9054269 30.749836,10.9054269 L30.749836,15.5928391 Z M4.78114163,12.9684132 L4.78114163,29.3429562 C3.09401069,29.5313525 1.59340144,29.7497422 0,30 L0,-5.68434189e-14 L4.4690224,-5.68434189e-14 L10.562377,17.0315868 L10.562377,-5.68434189e-14 L15.2497891,-5.68434189e-14 L15.2497891,28.061674 C13.5935889,28.3437998 11.906458,28.4375293 10.1246602,28.6868498 L4.78114163,12.9684132 Z" id="Fill-14"></path>
+                </g>
+            </svg>
+        </div>
+        <select class="select-idioma"> 
+            <div class="idioma">
+                <option>Português</option>
+                <option>English</option>   
             </div>
-        </div>
+        </select>
+        <a href="/login" class="redbutton" data-uia="header-login-link">Entrar</a>
+    </header>
+    <main class="main">
+      <div class="main-child">
+        <h1>Filmes, séries e muito mais. Sem limites.</h1>
+        <h2>Assista onde quiser. Cancele quando quiser.</h2>
+        <p>Pronto para assistir? Informe seu email para criar ou reiniciar sua assinatura.</p>
+        <form class="cta-form" method="GET">  
+                <input type="email" name="email" tabindex="0" autoComplete="email" maxLength="50" minLength="5" />
+                <label for="id-email-logon" class="placelabel"></label>
+            <button class="btn-custom"  type="submit" role="link" autoComplete="off">
+                <span>Vamos lá</span>
+            </button>
+                </div>
+            </div>
+        </form>
+        <div class="gradient"></div>
+    </main>
+  </div>	
+    <section class="hero-tv">
+      <div class="hero-container">
         <div class="hero">
-            <h1>Filmes, séries e muito mais. Sem limites. </h1>
-            <h2>Assista onde quiser. Cancele quando quiser.</h2>
-            <form class="cta-form email-form" method="GET">
-                <h3 class="email-form-title">Pronto para assistir? Informe seu email para criar ou reiniciar sua assinatura.</h3>
-                <div>    
-                    <ul class="simpleform">
-                        <li>           
-                            <label class="input-id" placeholder="email">
-                                <input type="email" name="email" tabindex="0" autoComplete="email" maxLength="50" minLength="5" />
-                                <label for="id-email-logon" class="placelabel">Email</label>
-                            </label>
-                        </li>
-                    </ul>
-                    <div>
-                        <button class="btn-custom"  type="submit" role="link" autoComplete="off">
-                            <span>Vamos lá</span>
-                        </button>
-                    </div>
-                </div>
-            </form>
-        </main>
-            <hr>
-            <section>
-                <div class="hero-tv">
-                    <div class="hero-tv-right">
-                        <div class="hero-tv-text1">
-                            <h1 class="hero-text">Aproveite na TV.</h1>
-                            <h2 class="hero-text2">Assista em Smart TVs, PlayStation, Xbox, Chromecast, Apple TV, aparelhos de Blu-ray e outros dispositivos.</h2>
-                        </div>
-                    </div>
-                        <hr>
-                    <div class="hero-offline">
-                        <div class="hero-tv-text2">
-                            <h1 class="hero-text">Baixe séries para assistir offline.</h1>
-                            <h2 class="hero-text2">Salve seus títulos favoritos e sempre tenha algo para assistir.</h2>
-                        </div>
-                    </div>
-                        <hr>
-                    <div class="hero-full">
-                        <div class="hero-tv-text1">
-                            <h1 class="hero-text">Assista quando quiser.</h1>
-                            <h2 class="hero-text2">Assista no celular, tablet, Smart TV ou notebook sem pagar a mais por isso.</h2>
-                        </div>
-                    </div>
-                        <hr>
-                    <div class="hero-kids">
-                        <div class="hero-tv-text2">
-                            <h1 class="hero-text">Crie perfis para crianças.</h1>
-                            <h2 class="hero-text2">Deixe as crianças se aventurarem com seus personagens favoritos em um espaço feito só para elas, sem pagar a mais por isso.</h2>
-                        </div>
-                    </div>
-                </div>
-            </section>
+          <div>
+            <h1>Aproveite na TV.</h1>
+            <p>
+              Assista em Smart TVs, PlayStation, Xbox, Chromecast, Apple TV,
+              aparelhos de Blu-ray e outros aparelhos.
+            </p>
+          </div>
+          <div class="img-tv">
+            <img src="/Imagens/tv.png" alt="TV" />
+         </div>
         </div>
-    
-    <hr>
-        <section>
+      </div>
+    </section>
+    <section class="hero-offline">
+        <div class="hero-container">
+            <div class="hero">
+          <div>
+            <h1>Baixe séries para assistir offline.</h1>
+            <p>Salve seus títulos favoritos e sempre tenha algo para assistir.</p>
+          </div>
+          <div class="mobile">
+            <img src="/Imagens/mobile.jpg" alt="#"/>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="hero-full">
+        <div class="hero-container">
+            <div class="hero">
+          <div>
+            <h1>Assista quando quiser.</h1>
+            <p>
+              Assista no celular, tablet, smart TV ou notebook sem pagar a mais
+              por isso.
+            </p>
+          </div>
+          <div class="mac">
+            <img src="/Imagens/device-mac.png" alt="#"/>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="hero-kids">
+        <div class="hero-container">
+            <div class="hero">
+          <div>
+            <h1>Crie perfis para crianças.</h1>
+            <p>Deixe as crianças se aventurarem com seus personagens favoritos em um espaço feito só para elas, sem pagar a mais por isso.</p>
+          </div>
+          <div class="inf-funfo">
+            <img src="/Imagens/inf-funfo.png" alt="#" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+        <nav>
             <div class="faq">
                 <h1>Perguntas frequentes</h1>
                 <ul class="faq-list">
@@ -120,28 +134,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
-        <form class="cta-form email-form" method="GET">
-            <h3 class="email-form-title">Pronto para assistir? Informe seu email para criar ou reiniciar sua assinatura.</h3>
-            <div>    
-                <ul class="simpleform">
-                    <li>           
-                        <label class="input-id" placeholder="email">
-                            <input type="email" name="email" tabindex="0" autoComplete="email" maxLength="50" minLength="5" />
-                            <label for="id-email-logon" class="placelabel">Email</label>
-                        </label>
-                    </li>
-                </ul>
-                <div>
-                    <button class="btn-custom"  type="submit" role="link" autoComplete="off">
-                        <span>Vamos lá</span>
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
-    <hr>
-    <footer>
+        </nav>
+    </section>
+    <footer class="footer">
         <p>Dúvidas? Ligue <a href="tel: 0800-761-4631">0800-761-4631</a></p>
         <ul>
             <li>Perguntas frequentes</li>
@@ -162,11 +157,22 @@
             <li>Avisos legais</li>
             <li>Só na Netflix</li>
         </ul>
-        <select>
-            <option>Português</option>
-            <option>English</option>   
-        </select>
-        <p class="footer-country">Netflix Brasil</p>
+        <form class="cta-form email-form" method="GET">  
+            <ul class="simpleform">
+                <li>           
+                    <label class="input-id" placeholder="email">
+                        <input type="email" name="email" tabindex="0" autoComplete="email" maxLength="50" minLength="5" />
+                        <label for="id-email-logon" class="placelabel">Email</label>
+                    </label>
+                </li>
+            </ul>
+            <button class="btn-custom"  type="submit" role="link" autoComplete="off">
+                <span>Vamos lá</span>
+            </button>
+                </div>
+            </div>
+        </form>
+      <p class="footer-country">&copy; Netflix Brasil.</p>
     </footer>
-</body>
+  </body>
 </html>
